---
source: crates/ide/src/handlers/diagnostics.rs
expression: "check(r#\"include \"not_exist.td\"\"#)"
---
/main.td
include file not found: not_exist.td
include "not_exist.td"
^^^^^^^^^^^^^^^^^^^^^^
